--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "8cf28025-7a63-4344-b6f0-48cdba348399"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
